# ChangeLog for net-www/swfdec-mozilla
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/swfdec-mozilla/ChangeLog,v 1.2 2007/10/20 10:51:58 pclouds Exp $

*swfdec-mozilla-0.5.3 (20 Oct 2007)

  20 Oct 2007; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  +swfdec-mozilla-0.5.3.ebuild:
  version bump, #196057

*swfdec-mozilla-0.5.2 (03 Sep 2007)

  03 Sep 2007; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org> +metadata.xml,
  +swfdec-mozilla-0.5.2.ebuild:
  Initial version from lots of contributors, detail list at #105823
