@@ -1,24 +1,24 @@
-DIST swfdec-mozilla-0.5.2.tar.gz 397028 RMD160 22bae82f8d0dbc50832aa5f0e441d7ace0b6ada1 SHA1 6bff82add45482fccc3653ebbf9ca248a46ab15c SHA256 40c98dc5de98ee5a8197a5ad59c7a89770f41fc6809c5f18657da696a7a88957
 DIST swfdec-mozilla-0.5.3.tar.gz 398007 RMD160 6fcb9679f1c281c0255be8222e8e931294d08cba SHA1 e525da807cf30b3e97bdccc1055162400884b748 SHA256 37179c1c83fe7bdc1fb951cd8440717133e9b71bb34db97c665975773c9c7ebc
-EBUILD swfdec-mozilla-0.5.2.ebuild 980 RMD160 c4c1f93b8b3780dbd3e36f9138369a06bb28ac98 SHA1 23e7aa8cb8e2070d6ecdbc4ac25e6cb956e0346e SHA256 1b23a991fed320b1492f1e331e0395ba0c55283373ea7ce593efaba9d987b6f7
-MD5 02fd95800f801faefb55cb24b6319f7a swfdec-mozilla-0.5.2.ebuild 980
-RMD160 c4c1f93b8b3780dbd3e36f9138369a06bb28ac98 swfdec-mozilla-0.5.2.ebuild 980
-SHA256 1b23a991fed320b1492f1e331e0395ba0c55283373ea7ce593efaba9d987b6f7 swfdec-mozilla-0.5.2.ebuild 980
+DIST swfdec-mozilla-0.5.4.tar.gz 398977 RMD160 f5684974abb4841bd4993d85d3c8f3093c779549 SHA1 cbbe7cf0b7cd6266fc92a3e1eafa21d7eab9d175 SHA256 9b1ea03fb870574a28b933f8eeeb68e10b39a527d711a97d4a09d250b8732a16
 EBUILD swfdec-mozilla-0.5.3.ebuild 980 RMD160 cfceeea005ec39d67999dc5e6aae4958e507b575 SHA1 8ec27b59798566a2802de69780873fe1dace9f00 SHA256 9327d85241ebef2ac76cea3fb2ddce383476998ca860a4f98e5b1aedaf66e5ad
 MD5 717dba9eccde1fb4dd8ab685b2bb633b swfdec-mozilla-0.5.3.ebuild 980
 RMD160 cfceeea005ec39d67999dc5e6aae4958e507b575 swfdec-mozilla-0.5.3.ebuild 980
 SHA256 9327d85241ebef2ac76cea3fb2ddce383476998ca860a4f98e5b1aedaf66e5ad swfdec-mozilla-0.5.3.ebuild 980
-MISC ChangeLog 589 RMD160 56b129f805f69204c789b367d1bd67389bdeb278 SHA1 17d78cbd1c0a8fd7b2ee9e7f1df811fd3fb0318d SHA256 fc3882aa1f9394a021174b5aa729e4baaec65e99730a5c310bae2362dca64cfd
-MD5 35b0b86b385eef57feef32b0067e43b6 ChangeLog 589
-RMD160 56b129f805f69204c789b367d1bd67389bdeb278 ChangeLog 589
-SHA256 fc3882aa1f9394a021174b5aa729e4baaec65e99730a5c310bae2362dca64cfd ChangeLog 589
+EBUILD swfdec-mozilla-0.5.4.ebuild 1090 RMD160 434d075078c120a4eb772973cb50c40f2ceba9e4 SHA1 035dc2737507ba999b7be9e8d686ab378064ca61 SHA256 c9b0785f20ba8a496a523ed1de627dd288d5ed3b998aaad51d5370a21e090c34
+MD5 c68794d8a153608250bc6a1dbefc7fa7 swfdec-mozilla-0.5.4.ebuild 1090
+RMD160 434d075078c120a4eb772973cb50c40f2ceba9e4 swfdec-mozilla-0.5.4.ebuild 1090
+SHA256 c9b0785f20ba8a496a523ed1de627dd288d5ed3b998aaad51d5370a21e090c34 swfdec-mozilla-0.5.4.ebuild 1090
+MISC ChangeLog 775 RMD160 ec00186cfe62702b6c1f2620b447405d41928582 SHA1 9a8605698e48cde1d33265756a052ceccc1e25e9 SHA256 d00ee3d42bdb1c072697f0087e8be55eb0081b5b9ba108b2f98702d09ec558ac
+MD5 bc372c78fe4a0ed0528015450cfc48c9 ChangeLog 775
+RMD160 ec00186cfe62702b6c1f2620b447405d41928582 ChangeLog 775
+SHA256 d00ee3d42bdb1c072697f0087e8be55eb0081b5b9ba108b2f98702d09ec558ac ChangeLog 775
 MISC metadata.xml 408 RMD160 152718481fac00a2cd5942f6e3b7c50624702475 SHA1 7e792b57a4cc3e92f9de35eb7c576b55faf26681 SHA256 77c6f21844efdd99afa6c247e9f5d76aced44994281ea201bc16189999006868
 MD5 231bad22165f2e8c6c18224c5711870c metadata.xml 408
 RMD160 152718481fac00a2cd5942f6e3b7c50624702475 metadata.xml 408
 SHA256 77c6f21844efdd99afa6c247e9f5d76aced44994281ea201bc16189999006868 metadata.xml 408
-MD5 ab4e47125a3df8edc2fd425b885734b8 files/digest-swfdec-mozilla-0.5.2 262
-RMD160 6eb97b4d5f2ffc148efb67429b4aa5c5c98c291d files/digest-swfdec-mozilla-0.5.2 262
-SHA256 1405eb77b929f91601a4cf4eb2df76c93266bb8d859b67b1b7d3247f1510d9ee files/digest-swfdec-mozilla-0.5.2 262
 MD5 14e4982f071efb4332bb762aa171000d files/digest-swfdec-mozilla-0.5.3 262
 RMD160 554aa52054ebcec336402d6ce17c6bfaac1da22b files/digest-swfdec-mozilla-0.5.3 262
 SHA256 fe396bae96fdfc5bd4050093b78477b163b5fe8af164997033b748e75cac8c57 files/digest-swfdec-mozilla-0.5.3 262
+MD5 4bf62ac08b7f63a43d8e9dfd0d011288 files/digest-swfdec-mozilla-0.5.4 262
+RMD160 47f3707ea2c455f386671c8bf110c3d7aea51fcc files/digest-swfdec-mozilla-0.5.4 262
+SHA256 66bc47f4bfd01cb9263af56e00b28bf70eb5131fe3dfe28afc55f106b15c3d42 files/digest-swfdec-mozilla-0.5.4 262
