@@ -1,3 +1,0 @@
-MD5 1fbe275167286f38e047a39ec2fdf67f swfdec-mozilla-0.5.2.tar.gz 397028
-RMD160 22bae82f8d0dbc50832aa5f0e441d7ace0b6ada1 swfdec-mozilla-0.5.2.tar.gz 397028
-SHA256 40c98dc5de98ee5a8197a5ad59c7a89770f41fc6809c5f18657da696a7a88957 swfdec-mozilla-0.5.2.tar.gz 397028
