@@ -1,0 +1,3 @@
+MD5 07fd3b851df6c70eb7f25944aa4990e3 swfdec-mozilla-0.5.4.tar.gz 398977
+RMD160 f5684974abb4841bd4993d85d3c8f3093c779549 swfdec-mozilla-0.5.4.tar.gz 398977
+SHA256 9b1ea03fb870574a28b933f8eeeb68e10b39a527d711a97d4a09d250b8732a16 swfdec-mozilla-0.5.4.tar.gz 398977
