@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/swfdec-mozilla/swfdec-mozilla-0.5.2.ebuild,v 1.1 2007/09/03 09:26:59 pclouds Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/swfdec-mozilla/swfdec-mozilla-0.5.4.ebuild,v 1.1 2007/11/24 18:13:58 pclouds Exp $
 
 inherit multilib versionator
 
@@ -13,10 +13,15 @@ SLOT="0"
 KEYWORDS="~amd64 ~ppc ~x86"
 IUSE="xulrunner"
 
-DEPEND=">=media-libs/swfdec-0.5.1
+DEPEND="=media-libs/swfdec-0.5.4*
 	xulrunner? ( net-libs/xulrunner )
 	!xulrunner? ( || ( www-client/mozilla-firefox www-client/seamonkey ) )"
 RDEPEND=""
+
+src_compile() {
+	econf --with-plugin-dir=/usr/$(get_libdir)/nsbrowser/plugins
+	emake || die "emake failed"
+}
 
 src_install() {
 		  exeinto /usr/$(get_libdir)/nsbrowser/plugins
