@@ -1,6 +1,12 @@
 # ChangeLog for net-www/swfdec-mozilla
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/swfdec-mozilla/ChangeLog,v 1.2 2007/10/20 10:51:58 pclouds Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/swfdec-mozilla/ChangeLog,v 1.3 2007/11/24 18:13:58 pclouds Exp $
+
+*swfdec-mozilla-0.5.4 (24 Nov 2007)
+
+  24 Nov 2007; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
+  -swfdec-mozilla-0.5.2.ebuild, +swfdec-mozilla-0.5.4.ebuild:
+  Version bump, #200208
 
 *swfdec-mozilla-0.5.3 (20 Oct 2007)
 
